--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,3 +20,15 @@ gunicorn==21.2.0  # Production WSGI server
 # Utilities
 python-dotenv==1.0.0  # Environment variables
 
+# AI/ML Services
+anthropic==0.18.1  # Claude API for resume analysis and categorization
+
+# Data Processing
+pandas==2.1.4  # For data aggregation and CSV processing
+openpyxl==3.1.2  # For Excel file handling
+
+# Resume Processing
+PyPDF2==3.0.1  # For PDF text extraction
+pdfplumber==0.10.3  # Better PDF text extraction (optional but recommended)
+requests==2.31.0  # For fetching resumes from URLs
+
